--- a/user/parameters.yaml
+++ b/user/parameters.yaml
@@ -1,24 +1,24 @@
-min_coverage_consensus: 70
-trimmo-ILLUMINACLIP: null #(default: null)
-trimmo-HEADCROP: null #(default = 0)
-trimmo-CROP: null #(default = 0)
-trimmo-SLIDINGWINDOW1: 5 #(default = 5)
-trimmo-SLIDINGWINDOW2: 20 #(default = 20)
-trimmo-LEADING: 3 #(default = 3)
-trimmo-TRAILING: 3 #(default = 3)
-trimmo-MINLEN: 35 #(default = 35)
-QUALITY: 8 #(default: 10)
-LENGTH: 50 #(default: 50)
-HEADCROP: 30 #(default: 70)
-TAILCROP: 30 #(default: 70)
-MAXLENGTH: 50000 #(default: 0)
-mapqual: 20 #(default = 20)
-mincov: 10 #default = 10)
-minfrac: 0.51 #(default = 0.51)
-Medaka_model: r941_min_high_g360 #(default: r941_min_high_g360) (see: https://nanoporetech.github.io/medaka/)
-mincov_medaka: 30 #(default: 29) #msa_masker medaka
-min_prop_for_variant_evidence: 0.80 #(default: 0.8).
-MASK_SITES: null #1,2,3,4
-MASK_REGIONS: null #200-250
-MASK_F_BEGINNING: null #40
-MASK_F_END: null #100
+min_coverage_consensus: 90
+trimmo-ILLUMINACLIP: null 
+trimmo-HEADCROP: null 
+trimmo-CROP: null 
+trimmo-SLIDINGWINDOW1: 5 
+trimmo-SLIDINGWINDOW2: 20 
+trimmo-LEADING: 3 
+trimmo-TRAILING: 3 
+trimmo-MINLEN: 35 
+QUALITY: 8 
+LENGTH: 50 
+HEADCROP: 30 
+TAILCROP: 30 
+MAXLENGTH: 50000 
+mapqual: 20 
+mincov: 30 
+minfrac: 0.51 
+Medaka_model: r941_min_high_g360 
+mincov_medaka: 30 
+min_prop_for_variant_evidence: 0.80 
+MASK_SITES: null 
+MASK_REGIONS: null 
+MASK_F_BEGINNING: null 
+MASK_F_END: null 
