--- a/config/constants.yaml
+++ b/config/constants.yaml
@@ -7,6 +7,7 @@ memory: ../config/max_memory.yaml
 software_parameters: ../user/parameters.yaml
 get_coverage: ../workflow/scripts/getCoverage.py
 references: ../user/references/
+primers: ../user/primers/
 rules: ../workflow/rules/
 envs: ../envs/
 scripts: ../workflow/scripts/
